[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/LevelTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/LevelEditor.gd" type="Script" id=2]
[ext_resource path="res://Levels/LevelEditorPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/LevelEditorOptionsPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/LevelEditorPlaceConfirmation.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Grid.png" type="Texture" id=6]
[ext_resource path="res://Levels/LevelEditorCameraContainer.gd" type="Script" id=7]
[ext_resource path="res://Levels/LevelEditorLevel.gd" type="Script" id=8]
[ext_resource path="res://Game/AudioManager.gd" type="Script" id=9]
[ext_resource path="res://Levels/LevelSaver.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/LevelSaverConfirmation.tscn" type="PackedScene" id=11]

[node name="LevelEditor" type="Node2D"]
script = ExtResource( 2 )

[node name="Grid" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Grid"]
motion_mirroring = Vector2( 64, 64 )

[node name="LevelEditorGrid" type="Sprite" parent="Grid/ParallaxLayer"]
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1088, 576 )

[node name="LevelEditorCameraContainer" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="LevelEditorCamera" type="Camera2D" parent="LevelEditorCameraContainer"]
anchor_mode = 0
current = true
zoom = Vector2( 3, 3 )
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = false

[node name="LevelEditorLevel" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="LevelTemplate" parent="LevelEditorLevel" instance=ExtResource( 1 )]

[node name="LevelEditorLevelSaver" parent="." instance=ExtResource( 10 )]

[node name="LevelEditorAudioManager" type="Node" parent="." groups=[
"AudioManager",
]]
script = ExtResource( 9 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="LevelEditorPanel" parent="UI" instance=ExtResource( 3 )]
mouse_filter = 2

[node name="LevelEditorPlaceConfirmation" parent="UI" instance=ExtResource( 5 )]

[node name="LevelEditorOptionsPanel" parent="UI" instance=ExtResource( 4 )]

[node name="LevelEditorLevelSaverConfirmation" parent="UI" instance=ExtResource( 11 )]

[editable path="LevelEditorLevel/LevelTemplate"]
